# sparkql

./: .gitignore  .pydocstyle  .pylintrc  .pytype.cfg  CONTRIBUTING.md  LICENSE  MarkupSafe-2.1.3-cp310-cp310-macosx_10_9_universal2.whl  PyYAML-6.0-cp310-cp310-macosx_11_0_arm64.whl  README.md  importlab-0.8-py2.py3-none-any.whl  libcst-1.0.1-cp310-cp310-macosx_11_0_arm64.whl  networkx-2.8.3-py3-none-any.whl  ninja-1.11.1-py2.py3-none-macosx_10_9_universal2.macosx_10_9_x86_64.macosx_11_0_arm64.macosx_11_0_universal2.whl  poetry.toml  pyproject.toml
.circleci/: config.yml
.github/workflows/: ci.yml  release.yml
examples/: README.md
examples/arrays/: arrays.py
examples/composite_schemas/: implements.py  includes.py  inheritance.py
examples/conferences/: conferences.py
examples/conferences_comparison/: __init__.py  plain_schema.py  sparkql_schema.py
examples/conferences_extended/: __init__.py  conferences.py
examples/maps/: maps.py
examples/merge_struct_types/: merge_struct_types.py
examples/metadata/: metadata.py
examples/nested_objects/: sparkql_example.py
examples/struct_instantiation/: __init__.py  instantiate_as_dict.py
examples/validation/: test_validation.py
sparkql/: __init__.py  accessors.py  exceptions.py  formatters.py  path.py  schema_builder.py  schema_merger.py
sparkql/fields/: __init__.py  array.py  atomic.py  base.py  map.py  struct.py
tasks/: __init__.py  formatting.py  linting.py  releasing.py  testing.py  typechecking.py  utils.py
tests/: .pytest.ini  test_accessors.py  test_formatters.py  test_path_funcs.py  test_schema_builder.py  test_schema_funcs.py  test_sparkql.py
tests/test_fields/: test_array.py  test_array_validate_on_value.py  test_atomic.py  test_base.py  test_field_equality.py  test_struct.py  test_struct_data_frame_validation.py  (+5 more)
(+30 files in other folders)
